--- a/core/templates/cotizaciones/detalle_cotizacion.html
+++ b/core/templates/cotizaciones/detalle_cotizacion.html
@@ -4,49 +4,74 @@
 {% block content %}
 <style>
   .recibo {
-    max-width: 380px;
-    margin: auto;
-    font-family: monospace;
-    font-size: 13px;
-    background: #fff;
-    padding: 10px;
-    border: 1px dashed #ccc;
-  }
+  max-width: 320px;
+  margin: auto;
+  font-family: monospace;
+  font-size: 13px;
+  background: var(--bs-body-bg, #fff);
+  color: var(--bs-body-color, #212529);
+  padding: 10px;
+  border: 1px dashed var(--bs-border-color, #ccc);
+}
 
-  .recibo h3, .recibo h4, .recibo p {
-    text-align: center;
-    margin: 5px 0;
-  }
+.recibo h3,
+.recibo h4,
+.recibo p {
+  text-align: center;
+  margin: 5px 0;
+  color: var(--bs-body-color, #212529);
+}
 
-  .recibo table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-    font-size: 12px;
-  }
+.recibo .datos-factura {
+  margin: 10px 0;
+  font-size: 14px;
+}
 
+.recibo table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+.recibo th,
+.recibo td {
+  border-bottom: 1px dashed var(--bs-border-color, #ccc);
+  padding: 4px;
+  text-align: left;
+  color: var(--bs-body-color, #212529);
+}
+
+.recibo .total {
+  text-align: right;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.recibo .firma {
+  margin-top: 30px;
+  text-align: center;
+}
+
+.linea-separadora {
+  border-color: var(--bs-border-color, #ccc);
+}
+
+@media print {
+  .btn-imprimir {
+    display: none;
+  }
+  
+  /* Forzar fondo blanco al imprimir */
+  .recibo {
+    background: white !important;
+    color: black !important;
+  }
+  
+  .recibo h3, .recibo h4, .recibo p,
   .recibo th, .recibo td {
-    border-bottom: 1px dashed #ccc;
-    padding: 4px;
-    text-align: left;
+    color: black !important;
   }
-
-  .recibo .total {
-    text-align: right;
-    font-weight: bold;
-    margin-top: 10px;
-  }
-
-  .recibo .firma {
-    margin-top: 30px;
-    text-align: center;
-  }
-
-  @media print {
-    .btn-imprimir, .btn-facturar {
-      display: none;
-    }
-  }
+}
 </style>
 
 <div class="recibo">
@@ -112,4 +137,5 @@
   </div>
 </div>
 {% endblock %}
+
 
