--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -140,8 +140,8 @@
       // Bloquear clic derecho
   document.addEventListener('contextmenu', event => event.preventDefault());
 
-  // Bloquear teclas de inspección (F12, Ctrl+Shift+I, etc.)
-  document.onkeydown = function(e) {
+   Bloquear teclas de inspección (F12, Ctrl+Shift+I, etc.)
+   document.onkeydown = function(e) {
     if (e.keyCode === 123) return false; // F12
     if (e.ctrlKey && e.shiftKey && (e.keyCode === 73 || e.keyCode === 74)) return false; // Ctrl+Shift+I / J
     if (e.ctrlKey && e.keyCode === 85) return false; // Ctrl+U
