--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -138,13 +138,13 @@
 
 
       // Bloquear clic derecho
-  document.addEventListener('contextmenu', event => event.preventDefault());
+    document.addEventListener('contextmenu', event => event.preventDefault());
 
-   Bloquear teclas de inspección (F12, Ctrl+Shift+I, etc.)
-   document.onkeydown = function(e) {
-    if (e.keyCode === 123) return false; // F12
-    if (e.ctrlKey && e.shiftKey && (e.keyCode === 73 || e.keyCode === 74)) return false; // Ctrl+Shift+I / J
-    if (e.ctrlKey && e.keyCode === 85) return false; // Ctrl+U
+   //Bloquear teclas de inspección (F12, Ctrl+Shift+I, etc.)
+      document.onkeydown = function(e) {
+      if (e.keyCode === 123) return false; // F12
+      if (e.ctrlKey && e.shiftKey && (e.keyCode === 73 || e.keyCode === 74)) return false; // Ctrl+Shift+I / J
+      if (e.ctrlKey && e.keyCode === 85) return false; // Ctrl+U
   };
   
   </script>
