modi 28/11 modulo factura,venta mas cliente pen diseño

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -143,7 +143,7 @@ toggleBtn.addEventListener('click', () => {
 
 
       // Bloquear clic derecho
-    //document.addEventListener('contextmenu', event => event.preventDefault());
+      document.addEventListener('contextmenu', event => event.preventDefault());
 
       //Bloquear teclas de inspección (F12, Ctrl+Shift+I, etc.)
       document.onkeydown = function(e) {
